--- a/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
         <!--커뮤니티-->
         <scene sceneID="8lC-k4-MVr">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="AJh-0J-KwN" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="communityNav" automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="AJh-0J-KwN" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="커뮤니티" image="tab_community" id="LRX-MA-Wme"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lfM-OT-VIJ">
@@ -882,7 +882,7 @@
         <!--의원 목록-->
         <scene sceneID="sgf-ok-fgC">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vnt-hg-dzm" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="partyNav" automaticallyAdjustsScrollViewInsets="NO" id="vnt-hg-dzm" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="의원 목록" image="tab_list" id="teo-6b-yfH"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Rdu-Si-rPf">
@@ -899,10 +899,10 @@
             </objects>
             <point key="canvasLocation" x="-849" y="806"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--TabbarVC-->
         <scene sceneID="1rR-YC-SWW">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Bdd-R8-IfB" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="tabBar" automaticallyAdjustsScrollViewInsets="NO" id="Bdd-R8-IfB" customClass="TabbarVC" customModule="Jungnami" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="ZAn-2i-iL4">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
@@ -911,10 +911,10 @@
                         <color key="barTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="vnt-hg-dzm" kind="relationship" relationship="viewControllers" id="H0Q-54-vCw"/>
-                        <segue destination="AJh-0J-KwN" kind="relationship" relationship="viewControllers" id="eIE-Zr-eq8"/>
-                        <segue destination="er9-gp-dhO" kind="relationship" relationship="viewControllers" id="nzh-OZ-LBm"/>
-                        <segue destination="r4i-3L-pUg" kind="relationship" relationship="viewControllers" id="FJb-hX-7zK"/>
+                        <segue destination="AJh-0J-KwN" kind="relationship" relationship="viewControllers" id="v5r-ya-AN9"/>
+                        <segue destination="vnt-hg-dzm" kind="relationship" relationship="viewControllers" id="xPx-ik-HiK"/>
+                        <segue destination="er9-gp-dhO" kind="relationship" relationship="viewControllers" id="85n-xW-rkt"/>
+                        <segue destination="r4i-3L-pUg" kind="relationship" relationship="viewControllers" id="0kc-a9-j8j"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ag1-cp-TlB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1053,7 +1053,7 @@
         <!--순위-->
         <scene sceneID="cCG-wt-JkB">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="er9-gp-dhO" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="rankNav" automaticallyAdjustsScrollViewInsets="NO" id="er9-gp-dhO" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="순위" image="tab_community" id="Za7-Y5-r65"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BsG-Zj-dPR">
@@ -1082,7 +1082,7 @@
         <!--Item-->
         <scene sceneID="6JN-1B-eWQ">
             <objects>
-                <navigationController id="r4i-3L-pUg" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="contentNav" id="r4i-3L-pUg" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="vzV-et-tOf"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tzd-Ji-o91">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
