테이블뷰 스크롤 후 다시 돌아올때 content offset 설정

--- a/Jungnami/Jungnami/SJ/Storyboard/Rank.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Rank.storyboard
@@ -21,9 +21,22 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JeI-gG-j1a">
                                 <rect key="frame" x="94" y="325" width="191" height="92"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="카카오톡 로그인"/>
                                 <connections>
                                     <action selector="loginWithKakao:" destination="Fav-UM-8Rz" eventType="touchUpInside" id="QCm-nX-S27"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Cd-VJ-L7c">
+                                <rect key="frame" x="56" y="46" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="x"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fqp-tB-3JK">
+                                <rect key="frame" x="247" y="576" width="78" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="그냥넘어가기"/>
+                                <connections>
+                                    <action selector="withoutLogin:" destination="Fav-UM-8Rz" eventType="touchUpInside" id="CIh-jc-8uc"/>
                                 </connections>
                             </button>
                         </subviews>
